@@ -7,7 +7,6 @@ import life.genny.datagenerator.model.BaseEntityAttributeModel;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class BaseEntityAttributeService {
@@ -29,6 +28,6 @@ public class BaseEntityAttributeService {
 
     public List<BaseEntityAttributeModel> getAttributeByEntityId(Long baseEntityId) {
         return baseEntityAttributeRepository.find("BASEENTITY_ID = ?1", baseEntityId).list()
-                .stream().map(BaseEntityAttributeModel::new).collect(Collectors.toList());
+                .stream().map(BaseEntityAttributeModel::new).toList();
     }
 }
